# local-intelligence-bro

./: .gitignore  HANDOFF.md  api.py  libby.py  pyproject.toml  speech.py  transcription.py  voice_client.py
deploy/systemd/: libby-api.service  libby-face.service  libby-ollama.service
static/: index.html
