[project]
name = "local-intelligence-bro"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "deepagents>=0.6.12",
    "fastapi>=0.139.2",
    "faster-whisper>=1.2.1",
    "langchain>=1.3.14",
    "langchain-ollama>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pocket-tts>=2.1.0",
    "torch>=2.5.0",
    "soundfile>=0.14.0",
    "uvicorn>=0.51.0",
    "websockets>=15.0.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
